Revert "UGC-19179: fix issue that When there is more than 2 product and last product get cut off"
This reverts commit 4b810202c97b0ea82228e0e550c09530c6799144.

--- a/widgets/styles/templates/products.scss
+++ b/widgets/styles/templates/products.scss
@@ -80,7 +80,7 @@
     }
 
     .swiper-expanded-product-recs {
-      width: calc(90% - 20px);
+      width: calc(90% - 40px);
 
       .swiper-wrapper {
         width: calc(100% - 20px);
